tests/compile-fail/03-tuple-destructuring-no-init.rs
use graph::workflow;
use namu as graph;

#[workflow]
fn tuple_destructuring_no_init() {
    let (x, y);
}

fn main() {}
