tests/compile-fail/03-tuple-destructuring-no-init.stderr
error: Tuple destructuring requires initializer
 --> tests/compile-fail/03-tuple-destructuring-no-init.rs:6:5
  |
6 |     let (x, y);
  |     ^^^^^^^^^^^
